# scrabble-solver

./: README.md  boardInput.txt  scrabbleSolver.cpp  script.cpp
cpp_scrable_solver/: CMakeLists.txt  French ODS dictionary.txt  main.cpp
cpp_scrable_solver/src/: CMakeLists.txt  Repertoire.cpp  Repertoire.h  Scrabble.cpp  Scrabble.h  SimpleTimer.h
rust_scrable_solver/: Cargo.toml  boardInput.txt  perf.data  perf.data.old
rust_scrable_solver/src/: board.rs  data_structure.rs  main.rs  pattern.rs  repertoire.rs  scrabble.rs  timer.rs
